# automation-tool-compare

./: .gitignore  README.md
javascript/: package.json
javascript/src/: calculator.js
playwright/javascript/: package-lock.json  package.json
playwright/javascript/src/: calculator.js
playwright/python/calculator/: pyproject.toml
python/calculator/: calculator.py  pyproject.toml
python/calculator/calculator/: calculator.py
typescript/: package.json
typescript/src/: calculator.js
