[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Michele Martone <michele.martone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
